refactor: split RerunCluster object into request and response object
